chapter-13/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cinetrack
  labels:
    istio-injection: enabled
