chapter-13/manifests/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cinetrack-mtls
  namespace: cinetrack
spec:
  mtls:
    mode: STRICT
